# ssfconv

./: LICENSE  README.md  pyproject.toml
src/ssfconv/: cli.py  translation.py
src/ssfconv/convert/: CaseSensitiveConfigParser.py  __init__.py  image_operation.py  ini_ssf_operation.py
src/ssfconv/extract/: ssf.py
